GS: updated version scheme

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,5 +2,9 @@
 current_version = 0.0.1
 commit = True
 tag = True
+serialize =
+  {major}.{minor}.{patch}
+  {major}.{minor}
+  {major}
 
 [bumpversion:file:Dockerfile]
