--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,7 +2,7 @@
 current_version = 0.0.1
 commit = True
 tag = True
-parse = (?P<major>\d+)\.(?P<minor>\d+)?\.(?P<patch>\d+)?
+parse = (?P<major>\d+)(\.(?P<minor>\d+))?(\.(?P<patch>\d+))?
 serialize =
   {major}.{minor}.{patch}
   {major}.{minor}
